# dumbo_contact_point_estimation

./: CMakeLists.txt  README.md  package.xml
cfg/: surface_tracing_controller.cfg
config/: dumbo_surface_tracing_controller.yaml
launch/: dumbo_contact_point_estimation.launch  dumbo_surface_tracing_controller.launch
src/: dumbo_surface_tracing_controller_node.cpp
